# cane-eval

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
cane_eval/: __init__.py  cli.py  criteria.py  demo.py  engine.py  export.py  judge.py  mining.py  profiler.py  providers.py  rca.py  reliability.py  suite.py
cane_eval/integrations/: __init__.py  _base.py  fastapi_agent.py  langchain.py  llamaindex.py  openai_compat.py  phlote.py
examples/: personality.yaml  phlote_eval.yaml  quickstart.ipynb  run_eval.py  support_agent.yaml
tests/: test_async_engine.py  test_criteria.py  test_engine.py  test_export.py  test_judge.py  test_mining.py  test_phlote.py  test_profiler.py  test_reliability.py  test_suite.py
