[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cane-eval"
version = "1.0.0"
description = "AI system reliability infrastructure. Evaluate any AI system's reliability across correctness, structure, and performance."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cane" },
]
keywords = ["llm", "eval", "evaluation", "ai-agents", "dpo", "training-data", "judge", "reliability", "schema-validation", "latency", "ai-reliability", "phlote", "personality-profiling", "steering-vectors", "embedding-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.39.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
gemini = [
    "google-genai>=1.0.0",
]
langchain = [
    "langchain-core>=0.1.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]
fastapi = [
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
]
integrations = [
    "langchain-core>=0.1.0",
    "llama-index-core>=0.10.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.24.0",
]
all-providers = [
    "openai>=1.0.0",
    "google-genai>=1.0.0",
]
profile = [
    "sentence-transformers>=2.2.0",
]
profile-umap = [
    "sentence-transformers>=2.2.0",
    "umap-learn>=0.5.0",
]
phlote = []
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
cane-eval = "cane_eval.cli:main"

[project.urls]
Homepage = "https://github.com/colingfly/cane-eval"
Documentation = "https://github.com/colingfly/cane-eval#readme"
Repository = "https://github.com/colingfly/cane-eval"
Issues = "https://github.com/colingfly/cane-eval/issues"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
